# EditGen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml
notebooks/: EditGen.ipynb
notebooks/evaluation/: Auffusion.ipynb  Comparison.ipynb  MusicGen.ipynb
notebooks/preliminary/: Comparing Soft & Hard Blending Strategies.ipynb  Generating Soft & Hard Blending Datasets.ipynb
src/auffusion/: converter.py
src/auffusion/prompt2prompt/: pipeline_prompt2prompt.py  ptp_utils.py
src/editgen/: __init__.py  _attention.py  _base_controller.py  _model.py  _tokens.py  controllers.py  modifiers.py
