[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "editgen"
version = "0.1.0"
description = "Cross Attention Control for Instruction-Based auto-regressive Audio Editing"
authors = [ { name = "vsioros", email = "billsioros97@gmail.com" } ]
requires-python = ">=3.9"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cython>=3.0.12",
  "diffusers==0.18.2",
  "huggingface-hub",
  "librosa>=0.10.2",
  "madmom<0.16",
  "matplotlib",
  "numpy",
  "opencv-python>=4.11.0.86",
  "scikit-image==0.22",
  "scikit-learn==1.3.2",
  "scipy>=1.13",
  "seaborn==0.13",
  "setuptools>=70.2",
  "tokenizers==0.14.1",
  "torch==1.13.1",
  "torchvision<0.15.2",
  "tqdm",
  "transformers",
]

[tool.ruff]
# Assume Python 3.8
target-version = "py310"

# Same as Black.
line-length = 88
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
format.docstring-code-line-length = "dynamic"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
format.docstring-code-format = false
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [ "E4", "E7", "E9", "F" ]
lint.ignore = [  ]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.docformatter]
black = true
non-strict = true
non-cap = [ "api" ]
recursive = true
in-place = true

[tool.pytest.ini_options]
pythonpath = [ "src" ]
asyncio_default_fixture_loop_scope = "session"
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "skip: Skip tests",
  "xfail: Expected to fail tests",
  "asyncio: Mark test to be run with pytest-asyncio",
]

[tool.coverage.paths]
source = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "src" ]
concurrency = [ "greenlet", "thread" ]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
ignore_errors = true
omit = [ "tests/*", "src/editgen" ]

[tool.mypy]
files = [ "src/editgen" ]
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
pretty = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.rye.workspace]
members = [ "src/editgen", "src/auffusion" ]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
  "poethepoet>=0.28.0",
  "pytest>=8.3.3",
  "pytest-sugar>=1.0.0",
  "pytest-clarity>=1.0.1",
  "pytest-asyncio>=0.24.0",
  "ipykernel",
  "ipywidgets",
  "jupyter",
  "pip>=25.0.1",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"

[tool.vulture]
min_confidence = 95
paths = [ "src/editgen", "tests" ]

[tool.poe.tasks]
[tool.poe.tasks.clean]
cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache .mypy_cache .coverage"
help = "Clean up any auxiliary files"

[tool.poe.tasks.format]
shell = "rye fmt"
help = "Format your codebase"

[tool.poe.tasks.hooks]
cmd = "rye run pre-commit run --all-files"
help = "Run all pre-commit hooks"

[tool.poe.tasks.test]
cmd = "rye test"
help = "Run the test suite"

[tool.poe.tasks.coverage]
cmd = "rye test -- --cov=src --cov-report=term-missing --cov-report=html"
help = "Run the test suite and produce a coverage report"

[tool.poe.tasks.type-check]
cmd = "rye run mypy"
help = "Run static type checking on your codebase"

[tool.poe.tasks.lint]
cmd = "rye lint"
help = "Lint your code for errors"

[tool.bandit]
recursive = true
exclude_dirs = [ "tests" ]
